--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "Abhishek Tiwari",
   "license": "ISC",
   "dependencies": {
+    "@types/bootstrap": "^5.0.0",
     "@types/express": "^4.17.8",
+    "@types/jquery": "^3.5.3",
     "@types/node": "^14.11.8",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "socket.io": "^2.3.0",
     "typescript": "^4.0.3"
   },
