--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "\"\"",
   "scripts": {
     "dev": "concurrently -k 'tsc -p ./src/server -w' 'tsc -p ./src/client -w' 'nodemon ./dist/server/server.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/server/server.js"
   },
   "author": "Abhishek Tiwari",
   "license": "ISC",
